WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
231837
Some canvas tests are failing
https://bugs.webkit.org/show_bug.cgi?id=231837
Summary
Some canvas tests are failing
Per Arne Vollan
Reported
2021-10-15 15:01:51 PDT
Some canvas tests are failing after
https://commits.webkit.org/242382@main
.
Attachments
Patch
(2.30 KB, patch)
2021-10-15 15:17 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-10-15 15:02:17 PDT
<
rdar://problem/84318280
>
Per Arne Vollan
Comment 2
2021-10-15 15:17:57 PDT
Created
attachment 441437
[details]
Patch
Brent Fulgham
Comment 3
2021-10-15 15:23:27 PDT
Comment on
attachment 441437
[details]
Patch Nice fix! r=me
Per Arne Vollan
Comment 4
2021-10-15 15:41:42 PDT
Comment on
attachment 441437
[details]
Patch Thanks for reviewing!
EWS
Comment 5
2021-10-15 16:45:49 PDT
Committed
r284291
(
243090@main
): <
https://commits.webkit.org/243090@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 441437
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug