Some canvas tests are failing https://bugs.webkit.org/show_bug.cgi?id=231837 <rdar://problem/84318280>

Reviewed by Brent Fulgham.

To be able to receive the Launch Services database over XPC, a Network process XPC endpoint has to be sent to the
GPU process. This was being sent in GPUProcessProxy::didFinishLaunching, but since the session ID and Website data
store is not always available there, it was sometimes not being sent. Instead, send the endpoint in
GPUProcessProxy::addSession, where the Website data store is always available.

* UIProcess/GPU/GPUProcessProxy.cpp:
(WebKit::GPUProcessProxy::didFinishLaunching):
(WebKit::GPUProcessProxy::addSession):


Canonical link: https://commits.webkit.org/243090@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284291 268f45cc-cd09-0410-ab3c-d52691b4dbfc