Source/WebKit/UIProcess/GPU/GPUProcessProxy.cpp
@@ -432,14 +432,6 @@ void GPUProcessProxy::didFinishLaunching(ProcessLauncher* launcher, IPC::Connect
     if (xpc_connection_t connection = this->connection()->xpcConnection())
         m_throttler.didConnectToProcess(xpc_connection_get_pid(connection));
 #endif
-
-#if PLATFORM(COCOA)
-    auto it = m_sessionIDs.begin();
-    if (it != m_sessionIDs.end()) {
-        auto webSiteDataStore = WebsiteDataStore::existingDataStoreForSessionID(*m_sessionIDs.begin());
-        webSiteDataStore->sendNetworkProcessXPCEndpointToProcess(*this);
-    }
-#endif
 }
 
 void GPUProcessProxy::updateProcessAssertion()
@@ -504,6 +496,10 @@ void GPUProcessProxy::addSession(const WebsiteDataStore& store)
 
     send(Messages::GPUProcess::AddSession { store.sessionID(), gpuProcessSessionParameters(store) }, 0);
     m_sessionIDs.add(store.sessionID());
+
+#if PLATFORM(COCOA)
+    store.sendNetworkProcessXPCEndpointToProcess(*this);
+#endif
 }
 
 void GPUProcessProxy::removeSession(PAL::SessionID sessionID)
